# zms-tradition-bot-template

./: .env  Cargo.toml  README.md  app.toml  tradesv3-copy.sqlite  tradesv3.sqlite
migrations/2025-03-26-134401_create_KeyValueStore/: down.sql  up.sql
migrations/2025-03-28-115230_create_orders/: up.sql
migrations/2025-03-28-115356_create_pairlocks/: down.sql  up.sql
migrations/2025-03-28-115603_create_trade_custom_data/: down.sql  up.sql
migrations/2025-03-28-115700_create_trades/: down.sql  up.sql
sql/: KeyValueStore.sql  orders.sql  pairlocks.sql  trades.sql
src/: config.rs  main.rs  schema.rs  server.rs
src/db/: repo.rs
src/server/: app.rs  auth.rs  response.rs  routes.rs
src/server/routes/: handlers.rs
src/server/routes/handlers/: pair.rs  robot.rs  trade.rs
src/server/routes/handlers/pair/: responses.rs
src/server/routes/handlers/robot/: responses.rs
src/server/routes/handlers/trade/: responses.rs
