[package]
name = "zms-tradition-bot-template"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# diesel = { version = "2.2.8", features = ["sqlite", "r2d2"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
once_cell = "1.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version="1.44.1", features = ["full"] }
warp = "0.3.7"

